syntax = "proto3";
package bookmark;

message IllustSimple {
    uint64 id = 1;
    uint32 height = 2;
    uint32 width = 3;
    uint32 type = 4;
    string image = 5;
    uint32 pageCount = 6;
    uint32 sanity = 7;
    uint64 time = 8;
    string title = 9;
}

message BookMarks {
    repeated IllustSimple illusts = 10;
    uint64 time = 8;
}